# F2BPtoolkit

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  todo.txt
examples/: didymos_dimorphos.py
examples/basic_ellipsoid/: basic_ellipsoid.py
examples/didymos_dimorphos_paraview/: primary.pvd  secondary.pvd
examples/didymos_dimorphos_paraview/primary/: primary_000.vtp  primary_001.vtp  primary_002.vtp  primary_003.vtp  primary_004.vtp  primary_005.vtp  primary_006.vtp  primary_007.vtp  primary_008.vtp  primary_009.vtp  primary_010.vtp  primary_011.vtp  primary_012.vtp  primary_013.vtp  primary_014.vtp  primary_015.vtp  primary_016.vtp  primary_017.vtp  primary_018.vtp  primary_019.vtp  primary_020.vtp  primary_021.vtp  primary_022.vtp  primary_023.vtp  primary_024.vtp  primary_025.vtp  primary_026.vtp  primary_027.vtp  primary_028.vtp  primary_029.vtp  primary_030.vtp  primary_031.vtp  primary_032.vtp  primary_033.vtp  primary_034.vtp  primary_035.vtp  primary_036.vtp  primary_037.vtp  primary_038.vtp  primary_039.vtp  (+61 more)
examples/didymos_dimorphos_paraview/secondary/: secondary_000.vtp  secondary_001.vtp  secondary_002.vtp  secondary_003.vtp  secondary_004.vtp  secondary_005.vtp  secondary_006.vtp  secondary_007.vtp  secondary_008.vtp  secondary_009.vtp  secondary_010.vtp  secondary_011.vtp  secondary_012.vtp  secondary_013.vtp  secondary_014.vtp  secondary_015.vtp  secondary_016.vtp  secondary_017.vtp  secondary_018.vtp  secondary_019.vtp  secondary_020.vtp  secondary_021.vtp  secondary_022.vtp  secondary_023.vtp  secondary_024.vtp  secondary_025.vtp  secondary_026.vtp  secondary_027.vtp  secondary_028.vtp  secondary_029.vtp  secondary_030.vtp  secondary_031.vtp  secondary_032.vtp  secondary_033.vtp  secondary_034.vtp  secondary_035.vtp  secondary_036.vtp  secondary_037.vtp  secondary_038.vtp  secondary_039.vtp  (+61 more)
examples/gravity_order/: gravity_order_comparison.py
examples/polyhedra/: kw4_polyhedron.py
f2bptoolkit/: __init__.py  analysis.py  animation.py  body.py  integrators.py  perturbations.py  results.py  simulation.py  spice_utils.py  state.py  visualization.py
src/: bindings.cpp  gubas_core.cpp  gubas_core.h
tests/: conftest.py  test_api.py  test_physics.py
